--- a/trunk/index.html
+++ b/trunk/index.html
@@ -16,26 +16,29 @@
     <script src="js/extras.js"></script>
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="#">Blue Card</a>
+<!--<div class="navbar navbar-inverse navbar-fixed-top">-->
+    <!--<div class="navbar-inner">-->
+        <!--<div class="container">-->
+            <!--<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
+            <!--<a class="brand" href="#">Blue Card</a>-->
 
-            <div class="nav-collapse collapse">
-            </div>
-            <ul class="nav pull-right">
-                <li class="active"><a href="#/login">Log In</a></li>
-                <li ng-include src="'logout.html'"></li>
-                <li ><a href="mailto:kevinbatchelor@gmail.com?Subject=Blue%20Card%20Comment" target="_top">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+            <!--<div class="nav-collapse collapse">-->
+            <!--</div>-->
+            <!--<ul class="nav pull-right" >-->
+                <!--{{sessionData}}-->
+                <!--<li class="active"><a href="#/login">Log In</a></li>-->
+                <!--<li ng-include src="'logout.html'"></li>-->
+                <!--<li ><a href="mailto:kevinbatchelor@gmail.com?Subject=Blue%20Card%20Comment" target="_top">Contact</a></li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+
+
 <br>
 <div ng-view=""></div>
 </body>
