--- a/login.html
+++ b/login.html
@@ -1,4 +1,6 @@
+
 <div class="container">
+    <div ng-include="'toolbar.html'"></div>
     <form name="login" class="box">
         <h2 class="heading">Login</h2>
         <input type="text" id = "username" name="username" class="input-block-level" placeholder="User Name" ng-model="username">
