--- a/cardlist.html
+++ b/cardlist.html
@@ -17,9 +17,9 @@
             <td>{{post.description}}</td>
             <td>{{post.votes}}</td>
             <td>{{post.owner}}</td>
-            <td ng-show="sessionData.Session.createcard==1"><a href="#/editcard/{{post.name}}/{{post.description}}/{{post.id}}"> <i class="icon-edit"></i></a></td>
-            <td ng-show="sessionData.Session.createcard==1"><a href="#/cardlist" ng-click="deleteMe(post)"><i class="icon-trash"></i></a></td>
-            <td ng-show="sessionData.Session.voteforcard==1"><a href="#/cardlist" ng-click="markMe(post)"><i class="icon-bookmark"></i></a></td>
+            <td ng-show="sessionData.Session.createcard==1"><a href="#/editcard/{{post.name}}/{{post.description}}/{{post.id}}" title="Edit Card."> <i class="icon-edit"></i></a></td>
+            <td ng-show="sessionData.Session.createcard==1"><a href="#/cardlist" ng-click="deleteMe(post)"><i class="icon-trash" title="Delete Card."></i></a></td>
+            <td ng-show="sessionData.Session.voteforcard==1"><a href="#/cardlist" ng-click="markMe(post)" title="Add to Favorites."><i class="icon-bookmark"></i></a></td>
             <td>{{post.error}}</td>
         </tr>
         </tbody>
