--- a/trunk/editcard.html
+++ b/trunk/editcard.html
@@ -5,6 +5,7 @@
         <input type="text" id="name" name="name" class="input-block-level" placeholder="Feature" ng-model="model.name">
         <textarea class="input-block-level" rows="10" id=description type="text" placeholder="Description"
                   name="description" ng-model="model.description"></textarea>
-        <input type="submit" value="edit" class="btn btn-primary" ng-click="clickMe(model)"/>
+        <!--<input type="submit" value="edit" class="btn btn-primary" ng-click="clickMe(model)"/>-->
+        <button class="btn btn-primary" ng-click="clickMe(model)"><i class="icon-pencil icon-white"></i> Edit Story</button>
     </form>
 </div>
