--- a/trunk/index.html
+++ b/trunk/index.html
@@ -8,38 +8,20 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>
     <link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js"></script>
 
     <script type="text/javascript" src="http://angular-ui.github.com/ng-grid/lib/ng-grid.debug.js"></script>
     <link href="css/main.css" rel="stylesheet">
+    <!--<link  href="print.css" media="print" rel="stylesheet">-->
     <script src="js/extras.js"></script>
 </head>
 <body>
-<!--<div class="navbar navbar-inverse navbar-fixed-top">-->
-    <!--<div class="navbar-inner">-->
-        <!--<div class="container">-->
-            <!--<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">-->
-                <!--<span class="icon-bar"></span>-->
-                <!--<span class="icon-bar"></span>-->
-                <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
-            <!--<a class="brand" href="#">Blue Card</a>-->
-
-            <!--<div class="nav-collapse collapse">-->
-            <!--</div>-->
-            <!--<ul class="nav pull-right" >-->
-                <!--{{sessionData}}-->
-                <!--<li class="active"><a href="#/login">Log In</a></li>-->
-                <!--<li ng-include src="'logout.html'"></li>-->
-                <!--<li ><a href="mailto:kevinbatchelor@gmail.com?Subject=Blue%20Card%20Comment" target="_top">Contact</a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
 
 
-<br>
+
+
 <div ng-view=""></div>
 </body>
 </html>
