--- a/trunk/admin.html
+++ b/trunk/admin.html
@@ -3,6 +3,6 @@
     <div class="hero-unit">
         <a href='api/newdb.php'>Create Database</a> - This creates a new database for the Bluecard Website.
         <br>
-        <a href="#/users">Users</a> - Manage users access rights to features.
+        <a href="#/userlist">Users</a> - Manage users access rights to features.
     </div>
 </div>
