--- a/users.html
+++ b/users.html
@@ -1,32 +1,30 @@
 <div class="container">
     <div ng-include="'toolbar.html'"></div>
-
-    <alert  ng-repeat="post in posts.error" type="post.type" >{{post.msg}}</alert>
-    <input type="text" placeholder="Filter" ng-model="name" />
+    <alert ng-repeat="post in posts.error" type="post.type">{{post.msg}}</alert>
+    <input type="text" placeholder="Filter" ng-model="name"/>
     <table id="target_table_id" class="table table-striped">
         <thead>
         <tr>
             <th>User</th>
-            <th>Create Card</th >
+            <th>Create Card</th>
             <th>Vote For Card</th>
             <th>Load Cards</th>
             <th>Edit Rights</th>
-            <th></th>
-
         </tr>
         </thead>
         <tbody>
-
-        <tr ng-repeat="post in posts.userrights " >
-            <td> {{post.username}} </td>
-            <td>{{post.createcard}}</td>
-            <td>{{post.voteforcard}}</td>
-            <td>{{post.loadcards}}</td>
-            <td>{{post.rightsedit}}</td>
+        <tr ng-repeat="post in posts.userrights ">
+            <td>{{post.username}}</td>
+            <td><input type="checkbox" ng-model="post.createcard" ng-true-value="1" ng-false-value="0"
+                       ng-click="setCreate(post)"></td>
+            <td><input type="checkbox" ng-model="post.voteforcard" ng-true-value="1" ng-false-value="0"
+                       ng-click="setVote(post)"></td>
+            <td><input type="checkbox" ng-model="post.loadcards" ng-true-value="1" ng-false-value="0"
+                       ng-click="setLoad(post)"></td>
+            <td><input type="checkbox" ng-model="post.rightsedit" ng-true-value="1" ng-false-value="0"
+                       ng-click="setEdit(post)"></td>
             <td>{{post.error}}</td>
         </tr>
         </tbody>
     </table>
-
-    <!--<div class="gridStyle" ng-grid="gridOptions"></div>-->
 </div>
