--- a/trunk/index.html
+++ b/trunk/index.html
@@ -2,26 +2,26 @@
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="utf-8">
-    <title>blue card</title>
+    <title>Story Backlog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css"></style>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-
+    <link href="css/bootstrap.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js"></script>
-
-    <script type="text/javascript" src="http://angular-ui.github.com/ng-grid/lib/ng-grid.debug.js"></script>
     <link href="css/main.css" rel="stylesheet">
-    <!--<link  href="print.css" media="print" rel="stylesheet">-->
     <script src="js/extras.js"></script>
 </head>
 <body>
-
-
-
-
 <div ng-view=""></div>
 </body>
 </html>
+
+
+<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>-->
+<!--<link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />-->
+<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script>-->
+<!--<script type="text/javascript" src="http://angular-ui.github.com/ng-grid/lib/ng-grid.debug.js"></script>-->
+<!--<link  href="print.css" media="print" rel="stylesheet">-->
+<!--<link href="css/bootstrap-responsive.css" rel="stylesheet">-->
+<!--<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">-->
