--- a/trunk/toolbar.html
+++ b/trunk/toolbar.html
@@ -1,36 +1,32 @@
 <div ng-controller="navCtrl">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
+    <div class="navbar navbar-inverse navbar-static-top navbar-fixed-top">
+        <div class="navbar-inner ">
             <div class="container">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                <a class="brand" href="#">Blue Card</a>
-
-                <div class="nav-collapse collapse">
-                </div>
+                </a>
+                <a class="brand" href="#">Fishbowl Backlog</a>
                 <ul class="nav pull-right">
                     <li ng-hide="sessionData.Session.username" class="active"><a href="#/login">Log In</a></li>
-
-                    <li ng-show="sessionData.Session.username" class="active"><a href="#/cardshow">{{sessionData.Session.username}}</a>
+                    <li ng-show="sessionData.Session.username" class="active"><a href="#/cardshow">{{sessionData.Session.username}}</a></li>
+                    <li>    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-cog icon-white"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="" ng-click="clickMeOff()"><i class="icon-arrow-right"></i> Log Out</a></li>
+                            <li><a href="mailto:kevinbatchelor@gmail.com?Subject=Blue%20Card%20Comment" target="top"><i class="icon-envelope"></i> Contact</a></li>
+                            <li><a ng-show="sessionData.Session.createcard==1" href="#/admin"><i class="icon-wrench"></i> Admin</a></li>
+                        </ul>
                     </li>
-                    <li><a href="" ng-click="clickMeOff()">Log Out</a></li>
-                    <li><a href="mailto:kevinbatchelor@gmail.com?Subject=Blue%20Card%20Comment" target="top">Contact</a>
-                    </li>
-
-                </ul>
-                <ul class="nav">
-                <li><a ng-show="sessionData.Session.createcard==1" href="#/newcard">New Card</a></li>
-                <li><a ng-show="sessionData.Session.loadcards==1" href="#/cardlist">Card List</a></li>
-                <li><a ng-show="sessionData.Session.voteforcard==1" href="#/cardshow">My Cards</a></li>
-                <li><a ng-show="sessionData.Session.createcard==1" href="#/admin">Admin</a></li>
                 </ul>
             </div>
         </div>
-
-
+        <div class="container">
+        <div class="btn-group">
+            <a class="btn" ng-show="sessionData.Session.createcard==1" href="#/newcard"><i class="icon-plus"></i> New Card</a>
+            <a class="btn" ng-show="sessionData.Session.loadcards==1" href="#/cardlist"><i class="icon-list"></i> Card List</a>
+            <a class="btn" ng-show="sessionData.Session.voteforcard==1" href="#/cardshow"><i class="icon-bookmark"></i> My Cards</a>
+        </div>
+        </div>
     </div>
 </div>
-<br>
